Fixed scroll-bar mess
Fixed mess caused by solid scrollbars

--- a/assets/risa.css
+++ b/assets/risa.css
@@ -1,7 +1,17 @@
-nav.navbar{
-    position: fixed !important;
-    top:0;
+body{
+    margin: 0;
     width: 100vw;
+}
+
+#risa{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+nav.navbar{
+    position: relative;
+    top:0;
     z-index: 100;
 }
 
@@ -12,23 +22,22 @@ nav.navbar{
 }
 .form-search:focus{flex:1}
 
-body{
-    margin: 0;
-}
 .nv-btn{
     margin-right: 5px;
     cursor: pointer;
 }
-#risa{
-    width:100vw;
+.scroll-area{
+    flex:1;
+    overflow: scroll;
+    overflow-x:hidden;
 }
 #skins-shower{
-    padding-top: 56px;
+    flex:1;
+    padding: 5px;
     display: flex;
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 5px;
 }
 .skin{
     margin: 5px;
